[tool.poetry]
name = "panda"
version = "0.1.0"
description = ""
authors = ["Jaganathg <30722985+jaganathg@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
